--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ parchment_mappings_version=2024.11.10
 
 minecraft_version=1.21
 minecraft_version_range=[1.21]
-# The loader version range can only use the major version of FML as bounds
+neo_version=21.0.167
 loader_version_range=[1,)
 
 ## Mod Properties
